--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 @custom-variant dark (&:where(.dark, .dark *));
 
 @theme {
+  --font-sans: "Lexend", ui-sans-serif, system-ui;
   --color-emerald-500: #10b981;
   --color-amber-400: #fbbf24;
 }
